helm/nginx-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: nginx-gateway
  namespace: kong
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - '*'
    port:
      name: http-8080
      number: 8080
      protocol: HTTP
  - hosts:
    - '*'
    port:
      name: http-8000
      number: 8000
      protocol: HTTP
